elements/rh-pagination/rh-pagination.css
:host {
  --_stepper-size: var(--rh-length-3xl, 48px);

  display: block;
  min-block-size: 4em;
}

:host([size='sm']) {
  --_stepper-size: var(--rh-length-2xl, 32px);
}

[hidden] {
  display: none !important;
}

#container {
  container-name: pagination;
  container-type: inline-size;
  display: flex;
  gap: var(--rh-space-2xl, 32px) calc(var(--rh-space-xs, 4px) / 2);
  flex-wrap: wrap;

  --_numeric-a-color: /** Sets the outline color when the page input has focus. */
    var(--rh-pagination-accent-color, var(--rh-color-interactive-primary-default));
  --_numeric-a-color-hover: var(--rh-color-interactive-primary-hover);
  --_numeric-a-color-focus:
    var(--rh-pagination-accent-color,
      var(--rh-color-interactive-primary-default));
  --_numeric-a-color-focus-outline:
    var(--rh-pagination-accent-color,
      var(--rh-color-interactive-primary-default));
  --_numeric-a-color-visited: var(--rh-color-interactive-primary-visited-default);
  --_numeric-a-color-visited-hover: var(--rh-color-interactive-primary-visited-hover);
  --_list-a-bg-color:
    light-dark(var(--rh-color-surface-lighter, #f2f2f2),
      oklch(from var(--rh-color-surface-dark, #383838) calc(l * 0.82) c h));
  --_list-a-current-page-border-color: var(--rh-color-border-subtle);
  --_list-a-current-page-bg-color:
    light-dark(var(--rh-color-surface-lightest, #ffffff),
      var(--rh-color-surface-darkest, #151515));
  --_list-a-text-color: var(--rh-color-text-primary);
  --_stepper-bg-color:
    light-dark(var(--rh-color-surface-lighter, #f2f2f2),
      oklch(from var(--rh-color-surface-dark, #383838) calc(l * 0.82) c h));
  --_stepper-hover-focus-color: var(--rh-color-text-primary-on-dark, #ffffff);
  --_border-top-hover-color:
    light-dark(var(--rh-color-gray-60, #4d4d4d),
      var(--rh-color-border-subtle-on-light, #c7c7c7));
  --rh-pagination-stepper-color:
    light-dark(var(--rh-color-gray-50, #707070),
      var(--rh-color-text-secondary-on-dark, #c7c7c7));

  /**
   * Remove this re-declaration when the status-disabled variable is defined in tokens
   * and deprecate `--rh-pagination-background-focused`.
  */
  --rh-color-icon-status-disabled:
    light-dark(var(--rh-color-gray-40, #a3a3a3),
      var(--rh-color-gray-60, #4d4d4d));
  /* stylelint-disable-next-line rhds/no-unknown-token-name */
  --rh-pagination-background-focused: var(--rh-color-icon-status-disabled);
}

@container pagination (min-width: 768px) {
  #container {
    flex-wrap: nowrap;
  }
}

.visually-hidden {
  border: 0;
  clip: rect(0, 0, 0, 0);
  block-size: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  inline-size: 1px;
}

@container pagination (min-width: 344px) {
  .xxs-visually-hidden {
    border: 0;
    clip: rect(0, 0, 0, 0);
    block-size: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    white-space: nowrap;
    inline-size: 1px;
  }
}

@container pagination (min-width: 768px) {
  .sm-visually-visible {
    clip: auto;
    block-size: auto;
    margin: 0;
    overflow: visible;
    padding: 0;
    position: static;
    white-space: normal;
    inline-size: auto;
  }
}

nav {
  display: none;
}

@container pagination (min-width: 768px) {
  nav {
    display: contents;
  }
}

svg {
  fill: currentcolor;
}

.stepper {
  background-color: var(--_stepper-bg-color);
  border: var(--rh-border-width-sm, 1px) solid transparent;

  /** Sets the stepper color. */
  color: var(--rh-pagination-stepper-color, var(--rh-color-gray-50, #707070));
  display: grid;
  font-family: var(--rh-font-family-heading, RedHatDisplay, 'Red Hat Display', Helvetica, Arial, sans-serif);
  font-size: var(--rh-font-size-heading-xs, 1.25rem);
  block-size: var(--_stepper-size);
  place-content: center;
  position: relative;
  text-decoration: none;
  inline-size: var(--_stepper-size);
}

.stepper:focus {
  border-radius: var(--rh-border-radius-default, 3px);
  outline-offset: -2px;
  outline: var(--rh-border-width-md, 2px) solid transparent;
  outline-color: var(--rh-pagination-accent-color, var(--rh-color-interactive-primary-default));
}

.stepper:hover:after,
.stepper:focus:before,
.stepper:focus:after {
  border-block-start-style: solid;
  content: '';
  inset-inline-start: -1px;
  position: absolute;
  inset-block-start: -1px;
  inline-size: 104%;
}

.stepper:hover:after,
.stepper:focus:before {
  border-block-color: var(--_border-top-hover-color);
  border-block-width: var(--rh-border-width-lg, 3px);
}

.stepper:focus:after {
  border-block-color: var(--rh-pagination-accent-color, var(--rh-color-border-interactive));
  border-block-width: var(--rh-border-width-md, 2px);
}

.stepper svg {
  block-size: 14px;
}

:is(#next, #last) svg,
:not(#next, #last) svg:dir(rtl) {
  rotate: 180deg;
}

:is(#next, #last) svg:dir(rtl) {
  rotate: 0deg;
}

.stepper[inert] {
  pointer-events: none;

  /** Sets the disabled stepper color. */
  color: var(--rh-pagination-background-focused);
  background-color: var(--_stepper-bg-color);
}

@container pagination (min-width: 768px) {
  #last {
    margin-inline-end: var(--rh-space-2xl, 32px);
  }
}

input {
  block-size: var(--rh-length-2xl, 32px);
  inline-size: var(--rh-length-4xl, 64px);
  font-size: var(--rh-font-size-body-text-md, 1rem);
  background:
    light-dark(var(--rh-color-surface-lightest, #ffffff),
      var(--rh-color-surface-darkest, #151515));
  border: var(--rh-border-width-sm, 1px) solid var(--rh-color-border-subtle);
  border-block-end-color:
    light-dark(var(--rh-color-gray-40, #a3a3a3),
      var(--rh-color-gray-60, #4d4d4d));
  box-sizing: border-box;
  padding-block: var(--rh-space-sm, 6px);
  padding-inline: var(--rh-space-md, 8px);
  color: var(--rh-color-text-primary);
}

input:focus {
  border:
    var(--rh-border-width-md, 2px)
    solid
    var(--rh-pagination-accent-color, var(--rh-color-interactive-primary-default));
  padding-block: calc(var(--rh-space-sm, 6px) - 1px);
  padding-inline: calc(var(--rh-space-md, 8px) - 1px);
  outline: none;
}

input:invalid {
  border-block-end-color:
    light-dark(var(--rh-color-red-60, #a60000),
      var(--rh-color-red-40, #f56e6e));
}

input:invalid:focus {
  border-block-end-width: var(--rh-border-width-md, 2px);
}

#numeric-middle {
  display: none;
}

#numeric-end {
  display: block;
  inline-size: 100%;
}

#numeric {
  align-items: center;
  display: flex;
  flex: 0;
  font-size: var(--rh-font-size-body-text-md, 1rem);
  gap: 0.5em;
  margin-block: 0;
  margin-inline: 0 var(--rh-space-lg, 16px);
  min-block-size: var(--_stepper-size);
  inline-size: 100%;
}

#numeric input {
  align-self: stretch;
  block-size: auto;
}

#numeric a {
  text-decoration: underline dashed var(--rh-border-width-sm, 1px);
  text-decoration-color: light-dark(var(--rh-color-gray-50), var(--rh-color-gray-40));
  text-underline-offset: max(5px, 0.28em);
  transition-timing-function: ease;
  transition-property: text-underline-offset, color, text-decoration-color;
  transition-duration: 0.3s;
  color: var(--_numeric-a-color);
}

#numeric a:hover {
  color: var(--_numeric-a-color-hover);
  text-decoration-color: inherit;
  text-underline-offset: max(6px, 0.33em);
}

#numeric a:visited {
  color: var(--_numeric-a-color-visited);
}

#numeric a:focus {
  border-radius: var(--rh-border-radius-default, 3px);
  color: var(--_numeric-a-color-focus);
  outline: var(--rh-border-width-md, 2px) solid transparent;
  outline-color: var(--_numeric-a-color-focus-outline);
  text-decoration-color: inherit;
  text-underline-offset: max(6px, 0.33em);
}

#numeric a:visited:hover {
  color: var(--_numeric-a-color-visited-hover);
}

@container pagination (min-width: 344px) {
  #numeric-middle {
    display: contents;
  }

  #numeric-end {
    display: none;
  }

  #numeric {
    margin-inline-start: var(--rh-space-lg, 16px);
  }
}

@container pagination (min-width: 768px) {
  #numeric-middle {
    display: none;
  }

  #numeric-end {
    display: contents;
  }

  #numeric {
    margin-inline-start: 0;
  }
}

/*****************************************************************************
 * BORDERLESS VARIANT
 *****************************************************************************/

/* NOTE: the `open` variant is deprecated but aliased until the next major release. */

:host([variant|='borderless']) .stepper,
:host([variant|='open']) .stepper {
  --_stepper-bg-color: transparent;
}

:host([variant|='borderless']) .stepper:hover:after,
:host([variant|='borderless']) .stepper:focus:before,
:host([variant|='borderless']) .stepper:focus:after,
:host([variant|='open']) .stepper:hover:after,
:host([variant|='open']) .stepper:focus:before,
:host([variant|='open']) .stepper:focus:after {
  border-block-start-style: none;
  border-block-end-style: solid;
  inset-block-end: -1px;
}

